# stocks-risk-visualizer

./: .gitignore  README.md  pyproject.toml
docs/: maths.md  time_series_var.md
sampe_inputs/point_in_time_var/: correct.csv
sampe_inputs/time_series_var/: time_series.csv
src/: app.py
src/pages/: 1_Point_in_Time_VaR.py  2_Time_Series_VaR.py
src/stocks_risk_visualizer/utils/: __init__.py  common.py
